# Suzuchan-3g

./: .gitignore  CMakeLists.txt  README.md  Suzuchan-math.cpp  Suzuchan.cpp  Suzuchan.h  fortune.py  maib40.py  main.cpp  rcat.py  shimpy.cpp  shimpy.h
exprtk/: readme.txt
ffxiv/: text_renderer.py  universalis.py  xivdb_cn.py
gojb/: gojb.py  jubeat_cache.pickle  jubeat_list.csv
single_include/3rd_include/utf8/utf8/: core.h
